--- a/src/pages/resume/index.css
+++ b/src/pages/resume/index.css
@@ -137,6 +137,12 @@
     transform: translateY(0.35rem);
 }
 
+@keyframes radial_retreat {
+    from {
+        background: radial-gradient(0, var(--resume-primary-mint-cream));
+    }
+}
+
 @media only screen and (min-width: 725px) {
     #resume_container {
         margin-top: 2rem;
